--- a/global.css
+++ b/global.css
@@ -13,3 +13,25 @@ body {
     max-width: 1000px;
     padding: 2em 2em 4em;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    color: #222;
+    font-weight: 600;
+    line-height: 1.3;
+}
+
+h2 {
+    margin-top: 1.3em;
+    font-size: 30px;
+    text-align: center;
+}
+
+h1 {
+    font-size: 50px;    
+    text-align: center;
+    color: rgb(3, 186, 252);
+}
+
+.Center {
+    text-align: center;
+}
