--- a/global.css
+++ b/global.css
@@ -4,8 +4,8 @@ html {
 }
 
 body {
-    background: #fff;
-    color: #545454;
+    background: rgb(24, 143, 187);
+    color: rgb(212, 102, 39);
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 1.5;
@@ -15,7 +15,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #222;
+    color: #070000;
     font-weight: 600;
     line-height: 1.3;
 }
